--- a/shopping-cart/package.json
+++ b/shopping-cart/package.json
@@ -3,13 +3,32 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "babel" :{
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
+    ]
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "test": "vitest",
+    "test": "jest --config jest.config.js --watch",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "testEnvironment": "jsdom"
+  },
+  
   "dependencies": {
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -19,19 +38,26 @@
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.5",
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.7",
+    "@babel/preset-react": "^7.23.3",
+    "@testing-library/jest-dom": "^6.1.6",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^23.0.1",
     "postcss": "^8.4.32",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.3.6",
     "vite": "^5.0.8",
     "vitest": "^1.1.0"
